fixed default scroll behavior over canvas on mobile devices

--- a/frontend/LoopHabitsNG/src/app/habit-details/habit-details.component.scss
+++ b/frontend/LoopHabitsNG/src/app/habit-details/habit-details.component.scss
@@ -53,3 +53,7 @@ div.overviewPart {
   text-align: center;
   vertical-align: central;
 }
+
+canvas {
+  touch-action: pan-y !important;
+}
